--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An E-commerce Application built using NodeJs Express",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "jhynzar",
